tests/ui/associated-inherent-types/normalization-overflow.next.stderr
error[E0275]: overflow evaluating the requirement `T::This == _`
  --> $DIR/normalization-overflow.rs:14:5
   |
LL |     type This = Self::This;
   |     ^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0275`.
